fixed flag not showing on browsers with JS disabled

--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -14,9 +14,14 @@
     padding-right: 0;
   }
 
-  nav img,
+  nav .nav-logo,
   .hamburger {
     display: none;
+  }
+
+  nav .links .link img {
+    height: 3vh;
+    width: 3vh;
   }
 
   nav .links {
